// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-multi-select complete 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 896px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-multi-select-uuid"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  CSS Colors
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                />
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-multi-select custom chip info 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 288px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-uuid"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                          0 - Simba 
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-uuid"
                        class="m-chip-delete__button"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-multi-select custom select-item 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 288px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-uuid"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                                    Simba
                                
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-uuid"
                        class="m-chip-delete__button"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-multi-select default 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 288px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-uuid"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                                    Maria Rainer
                                
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-uuid"
                        class="m-chip-delete__button"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-multi-select label 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 288px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--is-label-up m--has-cursor-pointer m--has-label m--has-value m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <label
              class="m-input-style__label"
              for="m-multi-select-uuid"
              style="margin-right: 0px;"
            >
              <span
                class="m-input-style__text"
              >
                <span>
                  La famille Von Trapp
                </span>
                 
                <!---->
              </span>
            </label>
             
            <div
              class="m-input-style__input"
            >
              <!---->
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-uuid"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                                    Maria Rainer
                                
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-uuid"
                        class="m-chip-delete__button"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-multi-select object as options 1`] = `
<div>
  <div
    class="m-base-select"
  >
    <div>
      <div
        class="m-multi-select"
        style="width: 100%; max-width: 288px;"
        tabindex="0"
      >
        <div
          class="m-input-style m--has-cursor-pointer m--has-label m--is-tag-default"
          style="margin-top: 10px;"
        >
          <div
            class="m-input-style__main"
          >
            <div
              class="m-input-style__body"
            >
              <label
                class="m-input-style__label"
                for="m-multi-select-uuid"
                style="margin-right: 0px;"
              >
                <span
                  class="m-input-style__text"
                >
                  <span>
                    Facultés
                  </span>
                   
                  <!---->
                </span>
              </label>
               
              <div
                class="m-input-style__input"
              >
                <!---->
                 
                <div
                  class="m-input-style__content"
                >
                  <div
                    class="m-multi-select__chips"
                  />
                    
                  <!---->
                   
                  <!---->
                </div>
                 
                <div
                  class="m-input-style__suffix"
                >
                  <div
                    class="m-multi-select__arrow"
                  >
                    <svg
                      aria-hidden="true"
                      class="m-icon m-multi-select__arrow__icon"
                      height="16px"
                      width="16px"
                    >
                      <!---->
                       
                      <use
                        aria-hidden="true"
                        class=""
                      />
                    </svg>
                  </div>
                   
                  <!---->
                </div>
              </div>
            </div>
             
            <!---->
          </div>
        </div>
         
        <div
          class="m-validation-message m-multi-select__validation-message"
        >
          <!---->
           
          <!---->
        </div>
      </div>
    </div>
     
    <div
      class="m-popup"
    >
      <div
        class="m-popper"
      >
         
        <!---->
      </div>
       
      <!---->
    </div>
  </div>
  <br />
  <br />
  <br />
  <br />
  <br />
  <br />
  <br />
  Value: []
</div>
`;

exports[`Storyshots components|m-multi-select select all link 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 288px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--has-value m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                >
                  <div
                    class="m-chip-delete m-multi-select__chip m--is-small"
                  >
                    <div
                      class="m-chip-delete__body"
                    >
                      <span
                        class="m-chip-delete__text"
                        id="mChipDeleteText-uuid"
                      >
                        <span
                          class="m-chip-delete__hidden-text"
                        >
                          Supprimer : 
                        </span>
                         
                                    Maria Rainer
                                
                      </span>
                       
                      <button
                        aria-labelledby="mChipDeleteText-uuid"
                        class="m-chip-delete__button"
                        type="button"
                      >
                        <svg
                          aria-hidden="true"
                          class="m-icon m-chip-delete__icon"
                          height="8px"
                          width="8px"
                        >
                          <!---->
                           
                          <use
                            aria-hidden="true"
                            class=""
                          />
                        </svg>
                      </button>
                    </div>
                  </div>
                </div>
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-multi-select/mobile iphone6 - select all link 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 288px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                />
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-multi-select/mobile iphone6 1`] = `
<div
  class="m-base-select"
>
  <div>
    <div
      class="m-multi-select"
      style="width: 100%; max-width: 288px;"
      tabindex="0"
    >
      <div
        class="m-input-style m--has-cursor-pointer m--is-tag-default"
        style="margin-top: 10px;"
      >
        <div
          class="m-input-style__main"
        >
          <div
            class="m-input-style__body"
          >
            <span
              class="m-input-style__label"
              style="z-index: -1;"
            >
              <span
                class="m-input-style__text"
              />
            </span>
             
            <div
              class="m-input-style__input"
            >
              <div
                class="m-input-style__prefix"
              />
               
              <div
                class="m-input-style__content"
              >
                <div
                  class="m-multi-select__chips"
                />
                  
                <!---->
                 
                <!---->
              </div>
               
              <div
                class="m-input-style__suffix"
              >
                <div
                  class="m-multi-select__arrow"
                >
                  <svg
                    aria-hidden="true"
                    class="m-icon m-multi-select__arrow__icon"
                    height="16px"
                    width="16px"
                  >
                    <!---->
                     
                    <use
                      aria-hidden="true"
                      class=""
                    />
                  </svg>
                </div>
                 
                <!---->
              </div>
            </div>
          </div>
           
          <!---->
        </div>
      </div>
       
      <div
        class="m-validation-message m-multi-select__validation-message"
      >
        <!---->
         
        <!---->
      </div>
    </div>
  </div>
   
  <div
    class="m-popup"
  >
    <div
      class="m-popper"
    >
       
      <!---->
    </div>
     
    <!---->
  </div>
</div>
`;
